inou/prp/tests/errors/read_unset_field.prp
/*
:name: read_unset_field
:type: error
:error: invalid in operator
*/

mut t = (const a=1, const b=nil)
const x = t.b + 1
